# deltaFX

./: LICENSE  README.md  index.html  overlay.html  package-lock.json  package.json  vite.config.ts
scripts/: gen-icons.mjs
src/: styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/control/: App.tsx  store.ts  useGlobalHotkeys.ts
src/control/components/: EffectEditor.tsx  EffectList.tsx  HotkeyInput.tsx  PositionGrid.tsx  Toggle.tsx
src/lib/: assets.ts  events.ts
src/overlay/: EffectRenderer.tsx  ModelViewer.tsx  OverlayApp.tsx  animations.ts  main.tsx  positions.ts  queue.ts
