[package]
name = "deltafx"
version = "0.1.0"
description = "deltaFX – Standalone Overlay App für OBS / TikTok Studio"
edition = "2021"
license = "MIT"

[lib]
name = "deltafx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
